# AoC2021

./: AoC.cabal  CHANGELOG.md  README.md  default.nix  run  shell.nix
app/: Main.hs
benchmark/: Main.hs
src/: AoC.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/AoC/: Input.hs  Parsing.hs  Util.hs
test/: Spec.hs
test-data/: 10a.txt  10b.txt  11a.txt  11b.txt  12a.txt  12b.txt  13a.txt  13b.txt  14a.txt  14b.txt  15a.txt  15b.txt  16a.txt  16b.txt  1a.txt  1b.txt  2a.txt  2b.txt  3a.txt  3b.txt  4a.txt  4b.txt  5a.txt  5b.txt  6a.txt  6b.txt  7a.txt  7b.txt  8a.txt  8b.txt  9a.txt  9b.txt
